SF Primes/src/objects/Partner_Contacts__c.object
<CustomObject>
    <description>Contact type for tracking third party partner communication.</description>
    <fields>
        <fullName>Email__c</fullName>
        <description>Partner email address</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Organization__c</fullName>
        <inlineHelpText>Organization affiliated with partner contact.</inlineHelpText>
        <label>Partner Organization</label>
        <picklist>
            <picklistValues>
                <fullName>Shift Digital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Partner phone number</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Security_Code__c</fullName>
        <inlineHelpText>Authorization code for partner contact</inlineHelpText>
        <label>Security Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status of the contact record</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Partner Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Partner_Organization__c</columns>
        <columns>Security_Code__c</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>